--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.31.0",
+    "react-responsive": "^10.0.0",
     "three-mesh-bvh": "^0.8.0",
     "three-stdlib": "^2.35.12"
   },
